--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <iframe
-  src='mapbox://styles/redpcat/ckh9dowfg0ssm19qn23f9tq2f?fresh=true&title=view&access_token=pk.eyJ1IjoicmVkcGNhdCIsImEiOiJja2g5ZDh2cXcwMGw4MnF1c24zNG9wdG9mIn0.KI_2iC7nKqjFOVp6SWNg2w#15/37.771/-122.436?title=true&zoomwheel=false&access_token=pk.eyJ1IjoicmVkcGNhdCIsImEiOiJja2g5ZDh2cXcwMGw4MnF1c24zNG9wdG9mIn0.KI_2iC7nKqjFOVp6SWNg2w' width='100%' height='400px'>
+  src='https://api.mapbox.com/styles/v1/redpcat/ckh9dowfg0ssm19qn23f9tq2f?access_token=pk.eyJ1IjoicmVkcGNhdCIsImEiOiJja2g5ZDh2cXcwMGw4MnF1c24zNG9wdG9mIn0.KI_2iC7nKqjFOVp6SWNg2w?fresh=true&title=view&access_token=pk.eyJ1IjoicmVkcGNhdCIsImEiOiJja2g5ZDh2cXcwMGw4MnF1c24zNG9wdG9mIn0.KI_2iC7nKqjFOVp6SWNg2w#15/37.771/-122.436?title=true&zoomwheel=false&access_token=pk.eyJ1IjoicmVkcGNhdCIsImEiOiJja2g5ZDh2cXcwMGw4MnF1c24zNG9wdG9mIn0.KI_2iC7nKqjFOVp6SWNg2w' width='100%' height='400px'>
 </iframe>  
